--- a/storefront/assets/css/custom.css
+++ b/storefront/assets/css/custom.css
@@ -92,7 +92,40 @@
   padding: 0.3em 0;
 }
 #menu-glavnoe li a {
-  font-size:1.01em;
+    font-size:1.01em;
+}
+
+/* main-page-action-block */
+.main-page-action-block {
+    display:block;
+    background-color:#f9f9f9;
+    border:2px #008c3e solid;
+    padding:25px;
+    margin-bottom:20px;
+    text-align:center;
+    box-shadow: 3px 10px 3px rgba(61, 46, 46, 0.1);
+}
+.main-page-action-block h2 {
+    color: #008c3e; 
+    text-align:center;
+}
+.main-page-action-block h3 {
+    color: #dc3545;
+    text-align:center;
+}
+.main-page-action-block .action-item {
+    display:inline-block; 
+    vertical-align:top; 
+    width:30%; 
+    padding:20px; 
+    border:1px #f0f0f0 solid;
+    margin-bottom:15px;
+    background-color:#fff;
+    box-shadow: 3px 7px 3px rgba(0,0,0,0.1);
+}
+.main-page-action-block .action-item .price-download-block {
+    display:block; 
+    margin-bottom:10px;
 }
 
 /* main */
