--- a/storefront/assets/css/custom.css
+++ b/storefront/assets/css/custom.css
@@ -263,6 +263,10 @@
       bottom:3.5em;
       right:0.7em;
   }
+  .main-page-action-block .action-item {
+        display:block;
+        width:100%;
+    }
 }
 @media (max-width:568px){	/* phone */
   
